--- a/app/src/main/res/layout/food_list_item.xml
+++ b/app/src/main/res/layout/food_list_item.xml
@@ -3,7 +3,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="4dp">
+    android:paddingHorizontal="4dp"
+    android:paddingVertical="2dp">
 
     <ImageView
         android:id="@+id/food_img"
@@ -28,12 +29,12 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/food_description"
+            android:id="@+id/food_category"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Description"
+            android:text="Category"
             android:textSize="20sp" />
 
         <TextView
